Use PSR-4 for autloading, and don't index composer.lock

--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,8 @@
     ],
     "require": {
         "symfony/framework-bundle": "~2.3"
+    },
+    "autoload": {
+        "psr-4": { "Shane\\JqueryBundle\\": "" }
     }
 }
